EGL: implement fgPlatformGetProcAddress
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@1214 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -67,6 +67,7 @@ freeglut/freeglut/src/android/native_app_glue/README -text
 freeglut/freeglut/src/android/native_app_glue/android_native_app_glue.c -text
 freeglut/freeglut/src/android/native_app_glue/android_native_app_glue.h -text
 freeglut/freeglut/src/egl/fg_display_egl.c -text
+freeglut/freeglut/src/egl/fg_ext_egl.c -text
 freeglut/freeglut/src/egl/fg_init_egl.c -text
 freeglut/freeglut/src/egl/fg_internal_egl.h -text
 freeglut/freeglut/src/egl/fg_state_egl.c -text
