Declare OpenGL 2.0 dynamically-loaded functions for internal use
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@1220 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -83,6 +83,8 @@ freeglut/src/fg_font.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/fg_font_data.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/fg_gamemode.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/fg_geometry.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/fg_gl2.c -text
+freeglut/src/fg_gl2.h -text
 freeglut/src/fg_init.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/fg_input_devices.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/fg_internal.h svn_keywords=Author+Date+Id+Revision
