--- a/.gitattributes
+++ b/.gitattributes
@@ -52,6 +52,8 @@ freeglut/freeglut/progs/demos/spaceball/vmath.h -text
 freeglut/freeglut/progs/demos/spaceball/vmath.inl -text
 freeglut/freeglut/progs/demos/subwin/subwin.c -text
 freeglut/freeglut/progs/demos/timer/timer.c -text
+freeglut/freeglut/src/android/fg_cursor_android.c -text
+freeglut/freeglut/src/android/fg_ext_android.c -text
 freeglut/freeglut/src/android/fg_gamemode_android.c -text
 freeglut/freeglut/src/android/fg_init_android.c -text
 freeglut/freeglut/src/android/fg_input_devices_android.c -text
