--- a/.gitattributes
+++ b/.gitattributes
@@ -144,6 +144,7 @@ freeglut/src/x11/fg_window_x11_glx.c -text
 freeglut/src/x11/fg_window_x11_glx.h -text
 freeglut/src/x11/fg_xinput_x11.c -text svnc_svn_005fkeywords=Author+Date+Id+Revision
 web-src/basic_page.php svn_keywords=Author+Date+Id+Revision
+web-src/docs/android.php -text
 web-src/docs/api.php svn_keywords=Author+Date+Id+Revision
 web-src/docs/install.php svn_keywords=Author+Date+Id+Revision
 web-src/freeglut-style.css svn_keywords=Author+Date+Id+Revision
