--- a/.gitattributes
+++ b/.gitattributes
@@ -146,6 +146,7 @@ freeglut/src/x11/fg_xinput_x11.c -text svnc_svn_005fkeywords=Author+Date+Id+Revi
 web-src/basic_page.php svn_keywords=Author+Date+Id+Revision
 web-src/docs/android.php -text
 web-src/docs/api.php svn_keywords=Author+Date+Id+Revision
+web-src/docs/gles.php -text
 web-src/docs/install.php svn_keywords=Author+Date+Id+Revision
 web-src/freeglut-style.css svn_keywords=Author+Date+Id+Revision
 web-src/help.php svn_keywords=Author+Date+Id+Revision
