--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ freeglut/config.sub
 freeglut/configure
 freeglut/configure.scan
 freeglut/cross-android
+freeglut/cross-android-module-gles1
+freeglut/cross-android-toolchain-gles1
+freeglut/cross-android-toolchain-gles2
 freeglut/cross-woe
 freeglut/debugfiles.list
 freeglut/debugsources.list
@@ -33,6 +36,8 @@ freeglut/ltmain.sh
 freeglut/man-pages
 freeglut/missing
 freeglut/native
+freeglut/native-gles1
+freeglut/native-gles2
 freeglut/progs/Makefile
 freeglut/progs/Makefile.in
 freeglut/progs/demos/CallbackMaker/.deps
