Add 'shapes' test for GLES1 (Android and Mesa EGL), as an independent CMake sample app
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@1246 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,8 @@ freeglut/freeglut/progs/demos/smooth_opengl3/Makefile
 freeglut/freeglut/progs/demos/smooth_opengl3/Makefile.in
 freeglut/freeglut/progs/demos/smooth_opengl3/smooth_opengl3
 freeglut/freeglut/progs/demos/smooth_opengl3/smooth_opengl3.exe
+freeglut/freeglut/progs/test-shapes-gles1/cross-android
+freeglut/freeglut/progs/test-shapes-gles1/native
 freeglut/freeglut/src/*.la
 freeglut/freeglut/src/*.lo
 freeglut/freeglut/src/.deps
