Fix compiler warnings
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@1256 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -68,6 +68,7 @@ freeglut/freeglut/src/android/fg_input_devices_android.c -text
 freeglut/freeglut/src/android/fg_internal_android.h -text
 freeglut/freeglut/src/android/fg_joystick_android.c -text
 freeglut/freeglut/src/android/fg_main_android.c -text
+freeglut/freeglut/src/android/fg_main_android.h -text
 freeglut/freeglut/src/android/fg_runtime_android.c -text
 freeglut/freeglut/src/android/fg_spaceball_android.c -text
 freeglut/freeglut/src/android/fg_state_android.c -text
@@ -79,8 +80,10 @@ freeglut/freeglut/src/android/native_app_glue/android_native_app_glue.h -text
 freeglut/freeglut/src/egl/fg_display_egl.c -text
 freeglut/freeglut/src/egl/fg_ext_egl.c -text
 freeglut/freeglut/src/egl/fg_init_egl.c -text
+freeglut/freeglut/src/egl/fg_init_egl.h -text
 freeglut/freeglut/src/egl/fg_internal_egl.h -text
 freeglut/freeglut/src/egl/fg_state_egl.c -text
+freeglut/freeglut/src/egl/fg_state_egl.h -text
 freeglut/freeglut/src/egl/fg_structure_egl.c -text
 freeglut/freeglut/src/egl/fg_structure_egl.h -text
 freeglut/freeglut/src/egl/fg_window_egl.c -text
@@ -100,6 +103,7 @@ freeglut/freeglut/src/fg_input_devices.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/fg_internal.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/fg_joystick.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/fg_main.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/fg_main.h -text
 freeglut/freeglut/src/fg_menu.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/fg_misc.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/fg_overlay.c svn_keywords=Author+Date+Id+Revision
