--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ freeglut/freeglut/configure
 freeglut/freeglut/configure.scan
 freeglut/freeglut/cross-android
 freeglut/freeglut/cross-android-module-gles1
+freeglut/freeglut/cross-android-module-gles2
 freeglut/freeglut/cross-android-toolchain-gles1
 freeglut/freeglut/cross-android-toolchain-gles2
 freeglut/freeglut/cross-woe
