Multi-touch test program
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@1311 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -43,6 +43,7 @@ freeglut/progs/demos/Fractals_random/fractals_random.c svn_keywords=Author+Date+
 freeglut/progs/demos/Lorenz/lorenz.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Resizer/Resizer.cpp -text
+freeglut/progs/demos/multi-touch/multi-touch.c -text
 freeglut/progs/demos/shapes/shapes.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/smooth_opengl3/smooth_opengl3.c -text
 freeglut/progs/demos/spaceball/spaceball.c -text
