--- a/.gitattributes
+++ b/.gitattributes
@@ -44,6 +44,8 @@ freeglut/freeglut/progs/demos/Lorenz/lorenz.c svn_keywords=Author+Date+Id+Revisi
 freeglut/freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/Resizer/Resizer.cpp -text
 freeglut/freeglut/progs/demos/multi-touch/multi-touch.c -text
+freeglut/freeglut/progs/demos/shapes/glmatrix.c -text
+freeglut/freeglut/progs/demos/shapes/glmatrix.h -text
 freeglut/freeglut/progs/demos/shapes/shapes.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/smooth_opengl3/smooth_opengl3.c -text
 freeglut/freeglut/progs/demos/spaceball/spaceball.c -text
