files for demoing GLUT_ICON
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@1531 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -41,7 +41,9 @@ freeglut/progs/demos/Fractals/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/fractals_random.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/lorenz.c svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/One/objects.ico -text
 freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/One/one.rc -text
 freeglut/progs/demos/Resizer/Resizer.cpp -text
 freeglut/progs/demos/multi-touch/multi-touch.c -text
 freeglut/progs/demos/shapes/glmatrix.c -text
