added the init error handler example program contributed by Chris Marshall Not building it as part of the demos yet, since it was submitted quite late in the 3.0 release process
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@1750 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -43,6 +43,7 @@ freeglut/freeglut/progs/demos/One/objects.ico -text
 freeglut/freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/One/one.rc -text
 freeglut/freeglut/progs/demos/Resizer/Resizer.cpp -text
+freeglut/freeglut/progs/demos/init_error_func/init_error_func.c -text
 freeglut/freeglut/progs/demos/multi-touch/multi-touch.c -text
 freeglut/freeglut/progs/demos/shapes/glmatrix.c -text
 freeglut/freeglut/progs/demos/shapes/glmatrix.h -text
