minor fix on CMakeLists for checking MSVC_VERSION

--- a/freeglut/freeglut/CMakeLists.txt
+++ b/freeglut/freeglut/CMakeLists.txt
@@ -233,7 +233,11 @@ IF(WIN32)
         SET( CMAKE_DEBUG_POSTFIX "d" )
     ENDIF(MSVC)
     
-    IF(NOT(MSVC_VERSION LESS "1300"))
+    IF(NOT(MSVC_VERSION LESS "1600"))
+    # minimum requirement for WM_TOUCH device
+        ADD_DEFINITIONS(-D_WIN32_WINNT=0x0601)
+        ADD_DEFINITIONS(-DWINVER=0x0601)
+    ELSEIF(NOT(MSVC_VERSION LESS "1300"))
     # minimum requirement for spaceball device
         ADD_DEFINITIONS(-D_WIN32_WINNT=0x0501)
         ADD_DEFINITIONS(-DWINVER=0x0501)
@@ -243,11 +247,6 @@ IF(WIN32)
         ADD_DEFINITIONS(-DWINVER=0x0500)
     ENDIF()
 
-    IF(NOT(MSVC_VERSION LESS "1600"))
-    # minimum requirement for WM_TOUCH device
-        ADD_DEFINITIONS(-D_WIN32_WINNT=0x0601)
-        ADD_DEFINITIONS(-DWINVER=0x0601)
-    ENDIF()
 ENDIF()
 
 IF(CMAKE_COMPILER_IS_GNUCC)
