Set public definitions in cmake package.
As with pkg-config, the cmake package now sets "-DFREEGLUT_GLES" when
appropriate.

--- a/freeglut/freeglut/CMakeLists.txt
+++ b/freeglut/freeglut/CMakeLists.txt
@@ -245,8 +245,8 @@ ENDIF()
 # but do use GLES constants directly for all other needs
 # GLES1 and GLES2 libraries are compatible and can be co-linked.
 IF(FREEGLUT_GLES)
-  ADD_DEFINITIONS(-DFREEGLUT_GLES)
-  LIST(APPEND LIBS GLESv2 GLESv1_CM EGL)
+    LIST(APPEND PUBLIC_DEFINITIONS -DFREEGLUT_GLES)
+    LIST(APPEND LIBS GLESv2 GLESv1_CM EGL)
 ELSE()
   FIND_PACKAGE(OpenGL REQUIRED)
   LIST(APPEND LIBS ${OPENGL_gl_LIBRARY})
@@ -449,9 +449,11 @@ ELSE()
 ENDIF()
 IF(FREEGLUT_BUILD_SHARED_LIBS)
     TARGET_LINK_LIBRARIES(freeglut ${LIBS})
+    TARGET_COMPILE_DEFINITIONS(freeglut PUBLIC ${PUBLIC_DEFINITIONS})
 ENDIF()
 IF(FREEGLUT_BUILD_STATIC_LIBS)
     TARGET_LINK_LIBRARIES(freeglut_static ${LIBS})
+    TARGET_COMPILE_DEFINITIONS(freeglut_static PUBLIC ${PUBLIC_DEFINITIONS})
 ENDIF()
 
 IF(FREEGLUT_BUILD_SHARED_LIBS)
